[gd_scene load_steps=13 format=3 uid="uid://cv44tvj0o5jcf"]

[ext_resource type="Script" uid="uid://d35fcmqkvt0n3" path="res://Scripts/ManagerScripts/GameManager.gd" id="1_pbw6q"]
[ext_resource type="Script" uid="uid://1yk74iatudu6" path="res://Scripts/ManagerScripts/NetworkManager.gd" id="2_v1gob"]
[ext_resource type="Script" uid="uid://crunxsujs24e1" path="res://Scripts/ManagerScripts/MapManager.gd" id="3_jw32o"]
[ext_resource type="PackedScene" uid="uid://b518v5yn7ig5o" path="res://Scenes/Map/TestTerrain.tscn" id="4_v1gob"]
[ext_resource type="Script" uid="uid://wudugmq7kbma" path="res://Scripts/ManagerScripts/PlayerSpawnManager.gd" id="5_v1gob"]
[ext_resource type="PackedScene" uid="uid://ckpgu08xdcwp4" path="res://Scenes/Player.tscn" id="6_jw32o"]
[ext_resource type="Texture2D" uid="uid://bwljc876116v2" path="res://Textures/UI/TitleBackground.png" id="7_50glp"]
[ext_resource type="Texture2D" uid="uid://digfldgx5a5cy" path="res://Textures/UI/logo_main.png" id="7_jw32o"]
[ext_resource type="PackedScene" uid="uid://wqi0voow1hdb" path="res://Scenes/AudioManager.tscn" id="7_vy5pj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_50glp"]
transparency = 1
vertex_color_use_as_albedo = true
albedo_color = Color(0, 1, 1, 0.301961)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vy5pj"]
texture = ExtResource("7_50glp")

[sub_resource type="LabelSettings" id="LabelSettings_nfy72"]
font_size = 25

[node name="Main" type="Node3D"]

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("network_manager", "map_manager", "spawn_manager", "main_canvas", "main_menu", "multiplayer_select_menu", "local_multiplayer_menu", "public_multiplayer_menu", "local_host_button", "local_join_button", "local_back_to_menu_button", "local_address_input", "local_port", "local_LAN_label", "local_max_players", "steam_status_label", "public_refresh_button", "public_create_lobby_button", "public_back_button", "public_list_container", "manual_join_id", "manual_join_button", "public_max_players", "connecting_panel")]
script = ExtResource("1_pbw6q")
network_manager = NodePath("../NetworkManager")
map_manager = NodePath("../MapManager")
spawn_manager = NodePath("../MapManager/PlayersContainer/PlayerSpawner")
main_canvas = NodePath("../CanvasLayer")
main_menu = NodePath("../CanvasLayer/MainControl/MainMenu")
multiplayer_select_menu = NodePath("../CanvasLayer/MainControl/MultiplayerSelectMenu")
local_multiplayer_menu = NodePath("../CanvasLayer/MainControl/LocalMultiplayerMenu")
public_multiplayer_menu = NodePath("../CanvasLayer/MainControl/PublicMultiplayerMenu")
local_host_button = NodePath("../CanvasLayer/MainControl/LocalMultiplayerMenu/ButtonsVBoxContainer/HostButton")
local_join_button = NodePath("../CanvasLayer/MainControl/LocalMultiplayerMenu/ButtonsVBoxContainer/JoinButton")
local_back_to_menu_button = NodePath("../CanvasLayer/MainControl/LocalMultiplayerMenu/BackToMenuButton")
local_address_input = NodePath("../CanvasLayer/MainControl/LocalMultiplayerMenu/LocalSettingsPanel/VBoxContainer/AddressInputLineEdit")
local_port = NodePath("../CanvasLayer/MainControl/LocalMultiplayerMenu/LocalSettingsPanel/VBoxContainer/PortLineEdit2")
local_LAN_label = NodePath("../CanvasLayer/MainControl/LocalMultiplayerMenu/LocalSettingsPanel/VBoxContainer/LocalIPLabel")
local_max_players = NodePath("../CanvasLayer/MainControl/LocalMultiplayerMenu/CreateLocalLobbyPanel/VBoxContainer/MaxPlayersSpinBox")
steam_status_label = NodePath("../CanvasLayer/MainControl/PublicMultiplayerMenu/CreateLobbyPanel/VBoxContainer/SteamStatusLabel")
public_refresh_button = NodePath("../CanvasLayer/MainControl/PublicMultiplayerMenu/RefreshButton")
public_create_lobby_button = NodePath("../CanvasLayer/MainControl/PublicMultiplayerMenu/CreateLobbyPanel/HostButton")
public_back_button = NodePath("../CanvasLayer/MainControl/PublicMultiplayerMenu/BackToMenuButton")
public_list_container = NodePath("../CanvasLayer/MainControl/PublicMultiplayerMenu/LobbyListPanel/ScrollContainer/VBoxContainer")
manual_join_id = NodePath("../CanvasLayer/MainControl/PublicMultiplayerMenu/ManualJoinPanel/VBoxContainer/LobbyIdLineEdit")
manual_join_button = NodePath("../CanvasLayer/MainControl/PublicMultiplayerMenu/ManualJoinPanel/JoinButton")
public_max_players = NodePath("../CanvasLayer/MainControl/PublicMultiplayerMenu/CreateLobbyPanel/VBoxContainer/MaxPlayersSpinBox")
connecting_panel = NodePath("../CanvasLayer/MainControl/PublicMultiplayerMenu/PublicConnectingPanel")

[node name="NetworkManager" type="Node" parent="."]
script = ExtResource("2_v1gob")

[node name="MapManager" type="Node" parent="." node_paths=PackedStringArray("game_manager", "network_manager")]
unique_name_in_owner = true
script = ExtResource("3_jw32o")
game_manager = NodePath("../GameManager")
network_manager = NodePath("../NetworkManager")
level_scene = ExtResource("4_v1gob")

[node name="PlayersContainer" type="Node3D" parent="MapManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.90816, 0)

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="MapManager/PlayersContainer" node_paths=PackedStringArray("spawn_point", "map_manager") groups=["player_spawner"]]
spawn_path = NodePath("..")
script = ExtResource("5_v1gob")
player_scene = ExtResource("6_jw32o")
spawn_point = NodePath("SpawnPoint01")
map_manager = NodePath("../..")

[node name="SpawnPoint01" type="Node3D" parent="MapManager/PlayersContainer/PlayerSpawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.46775, 3.43957, -2.10603)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="MapManager/PlayersContainer/PlayerSpawner/SpawnPoint01"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.3259, 0)
layers = 32
material = SubResource("StandardMaterial3D_50glp")

[node name="AudioManager" parent="." instance=ExtResource("7_vy5pj")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundPanel" type="Panel" parent="CanvasLayer/MainControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_vy5pj")

[node name="MainMenu" type="Control" parent="CanvasLayer/MainControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MainControl/MainMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -373.0
offset_right = 355.0
offset_bottom = 222.0
grow_horizontal = 2
texture = ExtResource("7_jw32o")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainControl/MainMenu"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -162.0
offset_top = 217.0
offset_right = 161.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2

[node name="SingleplayerButton" type="Button" parent="CanvasLayer/MainControl/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Singleplayer"

[node name="MultiplayerButton" type="Button" parent="CanvasLayer/MainControl/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Multiplayer"

[node name="QuitButton" type="Button" parent="CanvasLayer/MainControl/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Quit"

[node name="MultiplayerSelectMenu" type="Control" parent="CanvasLayer/MainControl"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainControl/MultiplayerSelectMenu"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -162.0
offset_top = 145.0
offset_right = 161.0
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 2

[node name="PublicMultiplayerButton" type="Button" parent="CanvasLayer/MainControl/MultiplayerSelectMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Public"

[node name="LocalMultiplayerButton" type="Button" parent="CanvasLayer/MainControl/MultiplayerSelectMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Local
"

[node name="BackToMainMenuButton" type="Button" parent="CanvasLayer/MainControl/MultiplayerSelectMenu"]
layout_mode = 0
offset_left = 9.0
offset_top = 603.0
offset_right = 186.0
offset_bottom = 639.0
mouse_default_cursor_shape = 2
text = "Back To Main Menu"

[node name="LocalMultiplayerMenu" type="Control" parent="CanvasLayer/MainControl"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreateLocalLobbyPanel" type="Panel" parent="CanvasLayer/MainControl/LocalMultiplayerMenu"]
layout_mode = 0
offset_left = 414.0
offset_top = 104.0
offset_right = 737.0
offset_bottom = 263.0

[node name="LocalLobbyLabel" type="Label" parent="CanvasLayer/MainControl/LocalMultiplayerMenu/CreateLocalLobbyPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Local Lobby"
label_settings = SubResource("LabelSettings_nfy72")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainControl/LocalMultiplayerMenu/CreateLocalLobbyPanel"]
layout_mode = 0
offset_left = 29.0
offset_top = 51.0
offset_right = 300.0
offset_bottom = 136.0
theme_override_constants/separation = 15
alignment = 1

[node name="MaxPlayersSpinBox" type="SpinBox" parent="CanvasLayer/MainControl/LocalMultiplayerMenu/CreateLocalLobbyPanel/VBoxContainer"]
layout_mode = 2
min_value = 2.0
max_value = 4.0
value = 4.0
alignment = 1
prefix = "Max Players"

[node name="LocalSettingsPanel" type="Panel" parent="CanvasLayer/MainControl/LocalMultiplayerMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 0
offset_left = 752.0
offset_top = 103.0
offset_right = 998.0
offset_bottom = 348.0
scale = Vector2(1, 0.920001)

[node name="SettingsLabel" type="Label" parent="CanvasLayer/MainControl/LocalMultiplayerMenu/LocalSettingsPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Lobby Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainControl/LocalMultiplayerMenu/LocalSettingsPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -119.0
offset_right = -20.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 13
alignment = 1

[node name="AddressInputLineEdit" type="LineEdit" parent="CanvasLayer/MainControl/LocalMultiplayerMenu/LocalSettingsPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Default Address: 127.0.0.1"
max_length = 15

[node name="PortLineEdit2" type="LineEdit" parent="CanvasLayer/MainControl/LocalMultiplayerMenu/LocalSettingsPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Default Port: 2450"
max_length = 4

[node name="GetLocalIPButton" type="Button" parent="CanvasLayer/MainControl/LocalMultiplayerMenu/LocalSettingsPanel/VBoxContainer"]
layout_mode = 2
text = "Get Local IPv4 Address"

[node name="LocalIPLabel" type="Label" parent="CanvasLayer/MainControl/LocalMultiplayerMenu/LocalSettingsPanel/VBoxContainer"]
layout_mode = 2
text = " 
"

[node name="ButtonsVBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainControl/LocalMultiplayerMenu"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -162.0
offset_top = 271.0
offset_right = 161.0
offset_bottom = -181.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="HostButton" type="Button" parent="CanvasLayer/MainControl/LocalMultiplayerMenu/ButtonsVBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainControl/LocalMultiplayerMenu/ButtonsVBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Join"

[node name="BackToMenuButton" type="Button" parent="CanvasLayer/MainControl/LocalMultiplayerMenu"]
layout_mode = 0
offset_left = 9.0
offset_top = 603.0
offset_right = 136.0
offset_bottom = 639.0
mouse_default_cursor_shape = 2
text = "Back To Menu"

[node name="PublicMultiplayerMenu" type="Control" parent="CanvasLayer/MainControl"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -17.0
offset_right = -10.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2

[node name="FilterPanel" type="Panel" parent="CanvasLayer/MainControl/PublicMultiplayerMenu"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
offset_left = 839.0
offset_top = 26.0
offset_right = 1085.0
offset_bottom = 331.0

[node name="FilterLabel" type="Label" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/FilterPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Lobby Filter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/FilterPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -255.0
offset_right = -20.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 13
alignment = 1

[node name="NameLineEdit" type="LineEdit" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/FilterPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Lobby Name"

[node name="MaxPlayersSpinBox" type="SpinBox" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/FilterPanel/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 4.0
value = 4.0
alignment = 1
prefix = "Max Players"

[node name="PasswordCheckBox" type="CheckBox" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/FilterPanel/VBoxContainer"]
layout_mode = 2
text = "Has Password"

[node name="FriendsOnlyCheckBox2" type="CheckBox" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/FilterPanel/VBoxContainer"]
layout_mode = 2
text = "Friends Only"

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/FilterPanel/VBoxContainer"]
visible = false
layout_mode = 2

[node name="ManualJoinPanel" type="Panel" parent="CanvasLayer/MainControl/PublicMultiplayerMenu"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
offset_left = 841.0
offset_top = 340.0
offset_right = 1087.0
offset_bottom = 508.0

[node name="ManualLabel" type="Label" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/ManualJoinPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Join Manually"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/ManualJoinPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -135.0
offset_right = -23.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 13
alignment = 1

[node name="LobbyIdLineEdit" type="LineEdit" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/ManualJoinPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Lobby ID"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/ManualJoinPanel"]
layout_mode = 0
offset_left = 33.0
offset_top = 82.0
offset_right = 197.0
offset_bottom = 140.0
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Join
"

[node name="RefreshButton" type="Button" parent="CanvasLayer/MainControl/PublicMultiplayerMenu"]
layout_mode = 2
offset_left = 443.0
offset_top = 534.0
offset_right = 689.0
offset_bottom = 621.0
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "REFRESH
Lobby List"

[node name="LobbyListPanel" type="Panel" parent="CanvasLayer/MainControl/PublicMultiplayerMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
offset_left = 363.0
offset_top = 25.0
offset_right = 788.0
offset_bottom = 508.0

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/LobbyListPanel"]
layout_mode = 0
offset_right = 425.0
offset_bottom = 479.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/LobbyListPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackToMenuButton" type="Button" parent="CanvasLayer/MainControl/PublicMultiplayerMenu"]
layout_mode = 0
offset_left = 9.0
offset_top = 603.0
offset_right = 136.0
offset_bottom = 639.0
mouse_default_cursor_shape = 2
text = "Back To Menu"

[node name="CreateLobbyPanel" type="Panel" parent="CanvasLayer/MainControl/PublicMultiplayerMenu"]
layout_mode = 0
offset_left = 70.0
offset_top = 77.0
offset_right = 309.0
offset_bottom = 382.0

[node name="CreateLabel" type="Label" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/CreateLobbyPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Create A Lobby"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/CreateLobbyPanel"]
layout_mode = 0
offset_left = 14.0
offset_top = 71.0
offset_right = 204.0
offset_bottom = 289.0
theme_override_constants/separation = 15

[node name="SteamStatusLabel" type="Label" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/CreateLobbyPanel/VBoxContainer"]
layout_mode = 2
text = "Steam: Status"

[node name="MaxPlayersSpinBox" type="SpinBox" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/CreateLobbyPanel/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 4.0
value = 4.0
alignment = 1
prefix = "Max Players"

[node name="FriendsOnlyCheckBox2" type="CheckBox" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/CreateLobbyPanel/VBoxContainer"]
visible = false
layout_mode = 2
text = "Friends Only"

[node name="PasswordCheckBox" type="CheckBox" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/CreateLobbyPanel/VBoxContainer"]
visible = false
layout_mode = 2
text = "Has Password"

[node name="PasswordLineEdit" type="LineEdit" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/CreateLobbyPanel/VBoxContainer"]
visible = false
layout_mode = 2
placeholder_text = "Password"

[node name="HostButton" type="Button" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/CreateLobbyPanel"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
offset_top = 348.0
offset_right = 239.0
offset_bottom = 435.0
mouse_default_cursor_shape = 2
text = "HOST"

[node name="PublicConnectingPanel" type="Panel" parent="CanvasLayer/MainControl/PublicMultiplayerMenu"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
offset_left = 434.0
offset_top = 203.0
offset_right = 680.0
offset_bottom = 273.0

[node name="ManualLabel" type="Label" parent="CanvasLayer/MainControl/PublicMultiplayerMenu/PublicConnectingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -11.5
offset_right = 52.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Connecting... "
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CanvasLayer/MainControl/MainMenu/VBoxContainer/SingleplayerButton" to="GameManager" method="_on_single_player_pressed"]
[connection signal="pressed" from="CanvasLayer/MainControl/MainMenu/VBoxContainer/MultiplayerButton" to="GameManager" method="_show_multiplayer_select"]
[connection signal="pressed" from="CanvasLayer/MainControl/MainMenu/VBoxContainer/QuitButton" to="GameManager" method="quit_game"]
[connection signal="pressed" from="CanvasLayer/MainControl/MultiplayerSelectMenu/VBoxContainer/PublicMultiplayerButton" to="GameManager" method="show_public_menu"]
[connection signal="pressed" from="CanvasLayer/MainControl/MultiplayerSelectMenu/VBoxContainer/LocalMultiplayerButton" to="GameManager" method="show_local_menu"]
[connection signal="pressed" from="CanvasLayer/MainControl/MultiplayerSelectMenu/BackToMainMenuButton" to="GameManager" method="_show_main_menu"]
[connection signal="pressed" from="CanvasLayer/MainControl/LocalMultiplayerMenu/LocalSettingsPanel/VBoxContainer/GetLocalIPButton" to="GameManager" method="_display_local_lan_IP"]
[connection signal="pressed" from="CanvasLayer/MainControl/LocalMultiplayerMenu/ButtonsVBoxContainer/HostButton" to="GameManager" method="_on_local_host_pressed"]
[connection signal="pressed" from="CanvasLayer/MainControl/LocalMultiplayerMenu/ButtonsVBoxContainer/JoinButton" to="GameManager" method="_on_local_join_pressed"]
[connection signal="pressed" from="CanvasLayer/MainControl/LocalMultiplayerMenu/BackToMenuButton" to="GameManager" method="_show_multiplayer_select"]
[connection signal="pressed" from="CanvasLayer/MainControl/PublicMultiplayerMenu/RefreshButton" to="GameManager" method="refresh_steam_lobby_list"]
[connection signal="pressed" from="CanvasLayer/MainControl/PublicMultiplayerMenu/BackToMenuButton" to="GameManager" method="_show_multiplayer_select"]
[connection signal="pressed" from="CanvasLayer/MainControl/PublicMultiplayerMenu/CreateLobbyPanel/HostButton" to="GameManager" method="create_steam_lobby"]
